2009-05-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml.c (task_get_blocktime_str_scm): substitute the usage
	of the deprecated qof_print_hors_elapsed_buff by our copy of it.

2009-05-09  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Look for qof.pc (libqof2) instead of
	qof-1.pc.

2009-01-02  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/interval_edit.glade: add the DISPLAY_SECONDS flag to the
	start_date field.

2008-11-28  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/idle-dialog.c (show_idle_dialog): mark the idle dialog as
       visible before stopping the project timer so we don't start the no
       project timeout timer when it's not needed.


2008-11-27  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/timer.c (start_no_project_timer): Fixed the condition in which
	the "No project" timer is started.

2008-11-25  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/prefs.glade: Fixed tooltip for the "No Project Timeout" option.

2008-03-21  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in, po/LINGUAS: use po/LINGUAS to list the available
	translations.

2008-03-10  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_init): Fixed display of
	the description column (Fixes #1911087)

2008-02-27  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/menucmd.c (about_box): Use GtkAboutDialog instead of the
	deprecated GnomeAbout.

	* doc/C/man/gnotime.1: Fixed the manpage's text

	* src/notes-area.c: include menus.h for prototype of the
	menus_get_popup function.

2008-02-15  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Changed version to 2.3.0

	* NEWS: Prepare announcement of 2.3.0 release

	* configure.in: Check that guile version is >= 1.8

	* src/ghtml.c: Added functions that make use of the billing block
	(Patch #1872426)

2008-02-14  Goedson Teixeira Paixao  <goedson@debian.org>
